2004-09-07  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.10): BUMP: 4.0.9a

2004-09-07  tag aolserver_v40_r8

2004-09-07  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.9): BUMP: 4.0.8

2004-09-07  Dossy Shiobara <dossy@panoptic.com>

	* README (1.4.2.1): Updated for 4.0.8.

2004-09-03  Dossy Shiobara <dossy@panoptic.com>

	* nscgi/nscgi.html (1.1.10.1): Updated nscgi module documentation
	  for 4.0.  Closes SF Bug #465907.  Backported from HEAD.

2004-08-25  Dossy Shiobara <dossy@panoptic.com>

	* nsd/queue.c (1.23.2.1): If reqPtr is NULL, close the connection
	  too.

2004-08-25  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.17.2.8): Previous code to eat leading blanks
	  assumed CR/LF, but some clients only send LF.  Code has been
	  cleaned up and corrected to handle this properly.

2004-08-20  Dossy Shiobara <dossy@panoptic.com>

	* Makefile (1.44.2.2), tests/new/all.tcl (1.1.2.1),
	  tests/new/harness.tcl (1.2.2.1), tests/new/ns_hrefs.test
	  (1.1.2.1), tests/new/test-ns_addrbyhost.adp (1.1.2.1),
	  tests/new/test-ns_hostbyaddr.adp (1.1.2.1),
	  tests/new/test-ns_hrefs.adp (1.1.2.1): Implement automated tests
	  that can be run from a stand-alone tclsh.  New Makefile target
	  added called "test" which runs the tests.

2004-08-18  Dossy Shiobara <dossy@panoptic.com>

	* tcl/fastpath.tcl (1.8.2.2): If _ns_dirlist gets an URL without a
	  trailing slash, issue a 302 redirect back to the same url WITH
	  the trailing slash.  Fixes SF Bug #935907.  Backported from HEAD.

2004-08-17  Dossy Shiobara <dossy@panoptic.com>

	* nsd/fastpath.c (1.18.2.2): Minor change to eliminate Win32
	  compile-time warning.  Closes SF Bug #696806.  Backported from
	  HEAD.

2004-08-14  Dossy Shiobara <dossy@panoptic.com>

	* aclocal.m4 (1.1.4.2), configure (1.15.2.3), nsd/dns.c (1.7.2.2):
	  Solaris 7 uses gethostbyaddr_r(), and the autoconf and GetHost()
	  versions didn't work.  Fixed now.  Backported from HEAD.
